--- a/app/views/ideas/edit.html.erb
+++ b/app/views/ideas/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this idea", @idea %> |
+  <%= link_to "詳細", @idea %> |
   <%= link_to "Back to ideas", ideas_path %>
 </div>
